# sumo_simulation

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh  package.xml  uncrustify.cfg
config/: calibration.perspective  joint_limits.yml  motor_drive.yml  rqt.perspective
launch/: calibrate_line.launch  gazebo.launch  mini_match.launch  robots.launch  spawn.launch  tiebreaker.launch
meshes/: base_link_collision.STL  base_link_visual.STL
models/dohyo_mini/: model.config  model.sdf
models/dohyo_mini/meshes/: base.stl  borda.stl  shikiri.stl
plugins/include/: control_plugin.h  line_sensor_plugin.h
plugins/src/: control_plugin.cpp  line_sensor_plugin.cpp
urdf/: colors.xacro  mini_sumo.gazebo  mini_sumo.urdf  mini_sumo.xacro
urdf/sensors/: distance.sensor  imu.sensor  line.sensor
worlds/: dohyo_mini.world
