<package format="2">
  <name>sumo_simulation</name>

  <version>1.0.0</version>

  <description>
    Simulation package for a mini sumo
  </description>

  <maintainer email="comp@thunderatz.org">ThundeRatz</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>velocity_controllers</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-pygame</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
